# PyThermoLinkDB

./: .gitignore  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
diagrams/: scheme1.md
docs/: docs.md  index.md
examples/: add thermodb with rules.py  context_1.py  create model-source - 1.py  load & add thermodb with rules - 1.py  load & add thermodb with rules - 2.py  load & add thermodb with rules - nasa.py  load & add thermodb with rules.py  load & check thermodb from files - 1.py  load & check thermodb from files.py  load n add thermodb with rules - nasa.py  mk - 1.py  mk-exp-1.py  model-source-mixture.py  model-source-multi-component.py  model-source.py  model_source_1.py  model_source_2.py  model_source_3.py  reference.py  reference_2.py  rules.py  source - 1.py  thermodb_config.yml
examples/equation-inputs/: doc-1.py
examples/mks/: mk - 1.py  mk-exp-1.py  mk-exp-2.py  mkct - 1.py  mkdt - 1.py  mkdts - 1.py  mkdts - 2.py  mkeqss - 1.py
examples/sources/: source_0.py  source_1.py
examples/thermo-model-source/: exp-1.py  exp-3.py
examples/thermo_model_source/: components_1.py  custom_source_1.py  exp-1.py  exp-2.py  exp-3.py  exp-4.py  exp-5.py  exp-6.py  model_source_1.py
examples/thermodb/: 1,3-Butadiene-g.pkl  1-butene-g.pkl  C2H6-g.pkl  C3H8-g.pkl  C4H6-g.pkl  C4H8-g.pkl  C6H6-l.pkl  CH3OH-g.pkl  CO-g.pkl  H2-g.pkl  Methane-1.pkl  N2-g.pkl  acetylene-g.pkl  benzene-C6H6-g-nasa-1.pkl  benzene-l.pkl  carbon dioxide-CO2-g-nasa-1.pkl  carbon dioxide-g-nasa.pkl  carbon dioxide-g.pkl  carbon dioxide.pkl  carbon monoxide-CO-g-nasa-1.pkl  carbon monoxide.pkl  dihydrogen-H2-g-nasa-1.pkl  dinitrogen-N2-g-nasa-1.pkl  dioxygen-O2-g-nasa-1.pkl  ethane-C2H6-g-nasa-1.pkl  ethane-g.pkl  ethanol-C2H6O-g-nasa-1.pkl  ethanol-l.pkl  ethanol.pkl  hydrogen-g.pkl  methane-CH4-g-nasa-1.pkl  methane.pkl  methanol-CH4O-g-nasa-1.pkl  methanol-g.pkl  methanol.pkl  mixture methanol-ethanol-methane.pkl  mixture methanol-ethanol.pkl  nitrogen-g.pkl  propane-C3H8-g-nasa-1.pkl  propane-g.pkl  (+5 more)
pyThermoLinkDB/: __init__.py  app.py
pyThermoLinkDB/builders/: __init__.py  custom_model_source.py  main.py  thermo_custom_source.py  thermo_model_source.py  thermo_source.py  thermo_source_extractor.py  thermo_source_hub.py  thermo_source_registry.py  thermo_source_validator.py  thermo_utils.py
pyThermoLinkDB/builders/source_management/: __init__.py  registry.py  resolver.py  validator.py
pyThermoLinkDB/config/: __init__.py  constants.py  deps.py  settings.py
pyThermoLinkDB/docs/: __init__.py  thermodbhub.py  thermolink.py  thermoutils.py  utils.py
pyThermoLinkDB/models/: __init__.py  component_models.py  constants_models.py  ref.py  source.py  thermo_models.py
pyThermoLinkDB/thermo/: __init__.py  constants_source.py  context.py  data_source.py  equation_source.py  equation_sources.py  input_context.py  main.py  source.py
pyThermoLinkDB/utils/: __init__.py  convertor.py  input_builder.py  loader.py  properties.py  thermo_source_tools.py  unit_tools.py
release/: v1.4.3.md  v1.5.0.md  v1.6.0.md
test/: Carbon Dioxide-multiple.pkl  carbon Dioxide-1.pkl  carbon dioxide-1.pkl  carbon dioxide.pkl  carbon monoxide-1.pkl  carbon monoxide.pkl  ethanol.pkl  methanol-1.pkl  methanol.pkl  test-0.py  test-1.py  test-2.py  test-3.py  test-4.py  test-5.py  test-6.py  test-7.py  test-8.py  test1.py  test2.py  test_constants_select_wise.py  test_constants_source_summary.py  test_custom_model_source.py  test_data_source_summary.py  test_equation_sources_summary.py  test_init_isolation.py  test_source_management.py  test_thermo_model_source_symbol_collisions.py  test_thermo_source.py  test_thermo_source_management.py  test_thermo_source_registry.py  test_thermo_source_tools.py  thermodb_config.md  thermodb_config.txt  thermodb_config.yml  thermodb_config_1.yml  thermodb_config_2.yml  thermodb_config_3.yml  thermodb_nrtl_1.pkl  water-1.pkl  (+1 more)
test/thermodb/: C2H2-g.pkl  C2H6O-l.pkl  C4H10-g.pkl  CH4-g.pkl  CO2-g.pkl  H2O-g.pkl  carbon monoxide-g.pkl  ethane-g.pkl  methane-g.pkl  n-butane-g.pkl
