[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyThermoLinkDB"
version = "1.3.7"
description = "PyThermoLinkDB is a Python package providing a robust and efficient interface between `PyThermoDB` and other applications."
readme = "README.md"
authors = [
    {name = "Sina Gilassi", email = "sina.gilassi@gmail.com"}
]
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["chemical engineering", "thermodynamics", "PyThermoDB"]
dependencies = [
    "PyYAML>=6.0.2",
    "pythermodb>=1.11.14",
]

[project.urls]
Homepage = "https://github.com/sinagilassi/PyThermoLinkDB"
Documentation = "https://pythermolinkdb.readthedocs.io/en/latest/"
Source = "https://github.com/sinagilassi/PyThermoLinkDB"
"Issue Tracker" = "https://github.com/sinagilassi/PyThermoLinkDB/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyThermoLinkDB*"]

# package data files
[tool.setuptools.package-data]
pyThermoLinkDB = ["data/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["tests", "*.tests", "*.tests.*"]
