[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyThermoLinkDB"
version = "1.3.8"
description = "PyThermoLinkDB is a Python package providing a robust and efficient interface between `PyThermoDB` and other applications."
readme = "README.md"
authors = [
    {name = "Sina Gilassi", email = "sina.gilassi@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["chemical engineering", "thermodynamics", "PyThermoDB"]
dependencies = [
    "pyyaml>=6.0.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pythermodb>=1.11.36",
    "pythermodb-settings>=0.1.0",
    "rich>=14.1.0",
]

[project.urls]
Homepage = "https://github.com/sinagilassi/PyThermoLinkDB"
Documentation = "https://pythermolinkdb.readthedocs.io/en/latest/"
Source = "https://github.com/sinagilassi/PyThermoLinkDB"
"Issue Tracker" = "https://github.com/sinagilassi/PyThermoLinkDB/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyThermoLinkDB*"]
"exclude" = [
    "test",
    "*.test",
    "*.test.*",
    "notebooks",
    "notebooks*",
    "docs",
    "examples",
    "examples*"
    ]

# package data files
[tool.setuptools.package-data]
pyThermoLinkDB = ["data/**/*"]
